chore(artifacts): add multilane field schema, templates, and chat miner; seed 20 drafts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "node bin/nstar-server.mjs",
     "test": "node test-streaming.mjs",
-    "dev": "PORT=8080 node bin/nstar-server.mjs"
+    "dev": "PORT=8080 node bin/nstar-server.mjs",
+    "extract:chat": "node scripts/extract-chat-snippets.mjs"
   },
   "keywords": [
     "ai",
