--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "node test-streaming.mjs",
     "dev": "PORT=8080 node bin/nstar-server.mjs",
     "extract:chat": "node scripts/extract-chat-snippets.mjs",
-    "normalize:drafts": "node scripts/normalize-drafts.mjs --input artifacts/drafts --out artifacts/normalized"
+    "normalize:drafts": "node scripts/normalize-drafts.mjs --input artifacts/drafts --out artifacts/normalized",
+    "promote:normalized": "node scripts/promote-normalized.mjs --src artifacts/normalized --dest artifacts/lanes"
   },
   "keywords": [
     "ai",
