--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev": "PORT=8080 node bin/nstar-server.mjs",
     "extract:chat": "node scripts/extract-chat-snippets.mjs",
     "normalize:drafts": "node scripts/normalize-drafts.mjs --input artifacts/drafts --out artifacts/normalized",
-    "promote:normalized": "node scripts/promote-normalized.mjs --src artifacts/normalized --dest artifacts/lanes"
+    "promote:normalized": "node scripts/promote-normalized.mjs --src artifacts/normalized --dest artifacts/lanes",
+    "validate:artifacts": "node scripts/validate-artifacts.mjs --dir artifacts/normalized --strict"
   },
   "keywords": [
     "ai",
