--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "normalize:drafts": "node scripts/normalize-drafts.mjs --input artifacts/drafts --out artifacts/normalized",
     "promote:normalized": "node scripts/promote-normalized.mjs --src artifacts/normalized --dest artifacts/lanes",
     "validate:artifacts": "node scripts/validate-artifacts.mjs --dir artifacts/normalized --strict",
-    "smoke:test": "node scripts/smoke-test.mjs"
+    "smoke:test": "node scripts/smoke-test.mjs",
+    "features:extract": "node scripts/extract-features.mjs --input artifacts/normalized --out artifacts/features"
   },
   "keywords": [
     "ai",
